Post project details

--- a/src/app/homepage/homepage.component.html
+++ b/src/app/homepage/homepage.component.html
@@ -34,12 +34,14 @@
 	   <h2>Grading</h2>
 	   <p>Grades will roughly correspond to:</p>
 	   <ul>
-	      <li>65% Group project</li>
+	      <li>75% Group project</li>
 	      <ul>
 	         <li>5% Project proposal</li>
-	         <li>15% Milestone report</li>
-	         <li>15% Final poster</li>
-	         <li>30% Final report</li>
+	         <li>15% Report on formative component</li>
+	         <li>15% Report on design component</li>
+	         <li>15% Report on evaluative component</li>
+	         <li>10% Final poster</li>
+	         <li>15% Final report</li>
 	      </ul>
 	      <li>15% Reading queries</li>
 	      <li>10% Participation</li>
