--- a/src/app/homepage/homepage.component.html
+++ b/src/app/homepage/homepage.component.html
@@ -27,10 +27,10 @@
 	   <h2>In-class time</h2>
 	   <p>Class will generally be a mix of lecture, discussion, and activities. In-class time aims to be interactive and participatory.</p>
 	   <h2>Discussion time</h2>
-	   <p class="tbd">Discussion time will focus on project-related activities such as team meetings and design critique.</p>
+	   <p>Discussion time will focus on project-related activities such as team meetings and design critique. Discussions are optional, but are a great opportunity to schedule meetings or gather feedback with other students in the class.</p>
 	   <h2>Project</h2>
 	   <p>A course project will be a major component of your work. Details about the project are <a href="./project">here</a>. Dates are also linked from the course calendar.</p>
-	   <p class="tbd">A Canvas or Slack thread will be created with some sample project ideas. You can also use that discussion to identify potential project partners and post your own ideas.</p>
+	   <p>A Canvas or Slack thread will be created with some sample project ideas. You can also use that discussion to identify potential project partners and post your own ideas.</p>
 	   <h2>Grading</h2>
 	   <p>Grades will roughly correspond to:</p>
 	   <ul>
@@ -51,5 +51,7 @@
 	   <h2>Repository</h2>
 	   <p>This website is live on GitHub: <a href="https://github.com/uci-inf-231/inf231-fa19" target="_blank">https://github.com/uci-inf-231/inf231-fa19</a></p>
 	   <p>You can create issues if information is unclear, incorrect, or out-of-date. You can even submit a pull request to resolve them yourself!</p>
+	   <h2>Acknowledgments</h2>
+	   <p>This course draws on materials from <a href="https://www.gillianhayes.com/">Gillian Hayes</a> and <a href="https://www.ics.uci.edu/~kobsa/">Alfred Kobsa</a> at UCI and <a href="https://www.hcde.washington.edu/fox">Tyler Fox</a> and <a href="https://homes.cs.washington.edu/~jfogarty/">James Fogarty</a> at the University of Washington. Many thanks!</p>
 	</main>
 </div>
