Update reading order & project description

--- a/src/app/homepage/homepage.component.html
+++ b/src/app/homepage/homepage.component.html
@@ -16,7 +16,7 @@
 	   <h2>Readings</h2>
 	   <p>Most weeks will have a required reading or two to introduce that week's topic. You are expected to have read and considered the assigned readings prior to class, as in-class activities will build upon the readings.</p>
 	   <h2>Reading queries</h2>
-	   <p>To help facilitate useful in-class discussion, you are expected to post at least one question on the method discussed to Slack by midnight the day before. Questions can be short. One sentence is fine, but more is welcome. Responding to someone else's question is also sufficient for credit.</p>
+	   <p>To help facilitate useful in-class discussion, you are expected to post at least one question on the method or topic discussed to Slack by midnight the day before. Questions can be short. One sentence is fine, but more is welcome. Responding to someone else's question is also sufficient for credit.</p>
 	   <p>Reading queries will be graded on a binary scale.</p>
 	   <ul>
 	      <li>0: If you did not participate.</li>
@@ -52,6 +52,6 @@
 	   <p>This website is live on GitHub: <a href="https://github.com/uci-inf-231/inf231-fa19" target="_blank">https://github.com/uci-inf-231/inf231-fa19</a></p>
 	   <p>You can create issues if information is unclear, incorrect, or out-of-date. You can even submit a pull request to resolve them yourself!</p>
 	   <h2>Acknowledgments</h2>
-	   <p>This course draws on materials from <a href="https://www.gillianhayes.com/">Gillian Hayes</a> and <a href="https://www.ics.uci.edu/~kobsa/">Alfred Kobsa</a> at UCI and <a href="https://www.hcde.washington.edu/fox">Tyler Fox</a> and <a href="https://homes.cs.washington.edu/~jfogarty/">James Fogarty</a> at the University of Washington. Many thanks!</p>
+	   <p>This course draws on materials from <a href="https://www.gillianhayes.com/">Gillian Hayes</a> and <a href="https://www.ics.uci.edu/~kobsa/">Alfred Kobsa</a> at UCI and <a href="https://www.hcde.washington.edu/fox">Tyler Fox</a>, <a href="https://homes.cs.washington.edu/~jfogarty/">James Fogarty</a>, and <a href="http://eagapie.com/">Elena Agapie</a> at the University of Washington. Many thanks!</p>
 	</main>
 </div>
