--- a/src/app/project/project.component.html
+++ b/src/app/project/project.component.html
@@ -25,7 +25,7 @@
    <p>Projects <em>must</em> have a formative, design, and evaluative component. It might be helpful to read the subsequent sections (<a routerLink="./" fragment="formative">formative</a>, <a routerLink="./" fragment="design">design</a>, <a routerLink="./" fragment="evaluative">evaluative</a>) to get a sense of whether your project idea will fit the course's requirements.</p>
    <p>You are welcome and even encouraged to align your project with your research, other course projects, or other goals outside this course. However, it is critical to define what you will accomplish in the course project. The course project must stand on its own.</p>
    <h4>Document</h4>
-   <p>Prepare a 1 page document addressing the following points:</p>
+   <p>Prepare a roughly 1 page document addressing the following points:</p>
    <ul>
       <li>
          Your team members
@@ -52,6 +52,7 @@
          <p>Due {{project.dueLong}}.</p>
          <p>Submit your proposal document in PDF format: <a [href]="project.link.document">{{project.link.document}}</a></p>
          <p>Submit your proposal presentation in PDF, PPTX, or KEY format: <a [href]="project.link.presentation">{{project.link.presentation}}</a></p>
+         <p>You can make a project group on Canvas at <a href="https://canvas.eee.uci.edu/courses/18236/groups">https://canvas.eee.uci.edu/courses/18236/groups</a>.</p>
       </div>
    </span>
    <h3 id="formative">Formative Component</h3>
