Post slides & update report description

--- a/src/app/project/project.component.html
+++ b/src/app/project/project.component.html
@@ -152,14 +152,14 @@
    </span>
    <h3 id="finalreport">Final Report</h3>
    <p>Prepare a final report that is 4 to 10 pages in length, excluding references.</p>
-   <p>Your final report should be presented the general structure of a research paper:</p>
+   <p>Your final report should describe:</p>
    <ul>
-      <li>Introduction and Motivation</li>
-      <li>Overview of Process</li>
-      <li>Description of Methods</li>
-      <li>Presentation of Results</li>
-      <li>Discussion / Future Work / Conclusion</li>
-      <li>References, if applicable</li>
+      <li>Introduction and motivation</li>
+      <li>Overview of design process</li>
+      <li>Description of methods at each stage</li>
+      <li>Presentation of results at each stage</li>
+      <li>Any changes you made to your problem or design between stages</li>
+      <li>Opportunities for future work</li>
    </ul>
    <p>Your prior reports should provide a good starting point for preparing this report. Write according to the content you have. Be appropriate thorough and precise in your presentation, but do not needlessly pad your text.</p>
    <p>Use the SIGCHI Proceedings Format: <a href="https://chi2020.acm.org/authors/chi-proceedings-format/">https://chi2020.acm.org/authors/chi-proceedings-format/</a>. You may use either Word or LaTeX to prepare your paper. Do not spend substantial time trying to correct formatting inconsistencies, just do your best.</p>
